--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 web3>=6.15.1,<7
-pydantic>=2.8.2
-websockets>=12.0
+pydantic>=2.8.2,<3
+websockets>=12.0,<13
+boto3>=1.35.44,<2
+eth_account>=0.11.3,<1
+toolz>=0.12.1,<1
+eth_utils>=2.1.0,<3
+pyasn1>=0.6.1,<1
